--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ footer {
 @media (max-width: 700px) {
   body {
     background-color: hsl(0, 100%, 98%);
+    overflow: unset;
   }
   .left {
     width: 100%;
